# schainbackend/routes/api.php
@@ -3,13 +3,13 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\ItemController;
-
+use App\Http\Controllers\Api\RoleController;
 Route::get('/user', function (Request $request) {
     return $request->user();
 })->middleware('auth:sanctum');
 
 
 Route::apiResource('items', ItemController::class);
-
+Route::apiResource('roles', RoleController::class);
 
 
